--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<title>Ten Sports HD 🔴 LIVE : 𝐎𝐮𝐭𝐟𝐥𝐚𝐧𝐤 丅ᐯ - Author: NUR MOHAMMAD</title> <!-- 🙋  সতর্ক করার পরও যদি  -->
+<title>PTV Sports HD 🔴 LIVE : 𝐎𝐮𝐭𝐟𝐥𝐚𝐧𝐤 丅ᐯ - Author: NUR MOHAMMAD</title> <!-- 🙋  সতর্ক করার পরও যদি  -->
   <!-- চুরি করার ইচ্ছা থাকে তবে আপনাকে তো face to face দেখতে পাবোনা  -->
 <!-- 🙄  তাই ||🩴||👡||🥾||👟||  দিয়ে ১০টা বারি দেওয়াটা কল্পনা করে নিলাম! 😅 -->
   
